vendored flatbuffers, remove package-info.java for both packages